--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      });
 
      function send() {
-        xhr.open('GET', 'http://localhost/generate?image='+document.getElementById("image").value);
+        xhr.open('GET', 'https://splatdraw-prod-magatsu-prod-jogmy0.mo2.mogenius.io/generate?image='+document.getElementById("image").value);
         xhr.send();
      }
 
