--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html style="width:100%">
     <head>
-        <title>Splat Draw</title>
+        <title>Splat DraweR</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="/socket.io/socket.io.js"></script>
     </head>
     <body style="width:100%">
-        <h2>SplatDraw v1.0</h2>
+        <h2>SplatDraweR v1.0</h2>
         <p>Please read the full documentation <a href="https://github.com/Magatsu41/splatdraw" target="_blank" rel="noopener noreferrer">here</a></p>
         <pre> </pre>
         <p>Paste the URL of the image in the field bellow :</p>
